--- a/src/index.css
+++ b/src/index.css
@@ -34,3 +34,133 @@
 }
 
 /* ***************** */
+
+body {
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.rock {
+  background-color: rgb(224, 200, 200);
+  border: 1.5px dashed brown;
+}
+
+.ground {
+  background-color: rgb(209, 209, 209);
+  border: 1.5px dashed brown;
+}
+.ghost {
+  background-color: rgb(247, 247, 247);
+  border: 1.5px dashed gray;
+}
+.electric {
+  background-color: rgb(255, 255, 161);
+  border: 1.5px dashed rgb(224, 191, 3);
+}
+.bug {
+  background-color: #f8e2c1;
+  border: 1.5px dashed rgb(224, 87, 87);
+}
+.poison {
+  background-color: #e1cde9;
+  border: 1.5px dashed blueviolet;
+}
+.normal {
+  background-color: #F4F4F4;
+  border: 1.5px dashed black;
+}
+.fairy {
+  background-color: rgba(255, 215, 222, 0.863);
+  border: 1.5px dashed rgb(252, 128, 149);
+}
+.fire {
+  background-color: #fcbeb3;
+  border: 1.5px dashed orangered;
+}
+.grass {
+  background-color:#E2F9E1;
+  border: 1.5px dashed green;
+}
+.water {
+  background-color:#E0F1FD;
+  border: 1.5px dashed blue;
+}
+
+.app-contaner {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 3rem 0.5rem;
+}
+.pokemon-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.all-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+.thumb-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2rem 0 ;
+  margin: 0.5rem;
+  /* border: 1px solid #efefef; */
+  border-radius: 1rem;
+  min-width: 260px;
+  text-align: center;
+  box-shadow: 0 3px 15px rgba(0, 0, 0, 0.089);
+}
+h3 {
+  margin-top: 10px;
+}
+.thumb-container .number {
+  border-radius: 1-rem;
+  padding: 0.2rem 0.4rem;
+  background-color: rgba(255,255,255,0.3);
+  margin-bottom: 15px;
+}
+.thumb-container img {
+  width: 150px;
+  height: 150px;
+}
+.thumb-container small {
+  text-transform: capitalize;
+}
+.detail-wrapper {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.detail-wrapper button {
+  color: rgb(22, 22, 22);
+  padding: .5rem;
+  margin-top: 1rem;
+  border: none;
+  border-radius: 0.2rem;
+  cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.185);
+}
+.load-more {
+  background: #f5f5f5 linear-gradient(#f5f5f5,#f1f1f1) repeat-x;
+  border-radius: 2px;
+  border: 1px solid #c6c6c6;
+  color: #444;
+  padding: 0.5rem 1.5rem;
+  min-width: auto;
+  margin-top: 1rem;
+}
+
+
+/* **************************** */
+
+
