--- a/src/index.css
+++ b/src/index.css
@@ -230,3 +230,58 @@ h3 {
 /* ******************* */
 
 
+
+#scrollbar-wrapper
+{
+  display: flex;
+  height: 100vh;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center; 
+}
+
+.scrollbar
+{
+	height: 300px;
+	width: 30px;
+	background: #F5F5F5;
+	overflow-y: scroll;
+	margin: 25px;
+}
+
+.force-overflow
+{
+	min-height: 450px;
+}
+
+
+
+body::-webkit-scrollbar-track
+{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar
+{
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+body::-webkit-scrollbar-thumb
+{
+	background-color: #F90;	
+	background-image: -webkit-linear-gradient(45deg,
+	                                          rgba(255, 255, 255, .2) 25%,
+											  transparent 25%,
+											  transparent 50%,
+											  rgba(255, 255, 255, .2) 50%,
+											  rgba(255, 255, 255, .2) 75%,
+											  transparent 75%,
+											  transparent)
+}
+
+
+
+
+/* ************* */
