--- a/src/index.css
+++ b/src/index.css
@@ -285,3 +285,23 @@ body::-webkit-scrollbar-thumb
 
 
 /* ************* */
+.imghover {
+  transition: transform 0.3s;
+}
+
+.imghover:hover {
+  transform: scale(1.2);
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+/* ********* */
+
+.text-hover {
+  transition: color 0.3s ease;
+}
+
+.text-hover:hover {
+  color: #ff1361;
+  font-weight: bold;
+}
